search and four country page designed

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,25 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0% 5%;
+}
+
+h4 {
+  font-size: 1rem;
+  color: rgb(56, 56, 56);
+  line-height: 2.5rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+  color: rgb(56, 56, 56);
+  line-height: 2.5rem;
+  margin: 2rem 0rem;
+}
+
+a {
+  color: rgb(56, 56, 56);
+
 }
 
 code {
